MDEV-17613 MIN/MAX Optimization (Select tables optimized away) does not work

Prune to now-partition when there is no FOR SYSTEM_TIME clause.

[Closes tempesta-tech/mariadb#565]